# runwasi

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/containerd-shim-wasm/: Cargo.toml
crates/containerd-shim-wasm/src/sandbox/: exec.rs  oci.rs  shim.rs
crates/containerd-shim-wasm/src/sandbox/cgroups/: cgroupv1.rs  cgroupv2.rs
crates/containerd-shim-wasmedge/: Cargo.toml
crates/containerd-shim-wasmedge/src/: executor.rs  instance.rs
crates/containerd-shim-wasmtime/: Cargo.toml
crates/containerd-shim-wasmtime/src/: instance.rs
crates/wasmedge/: Cargo.toml
crates/wasmedge/src/: instance.rs
test/k8s/: Dockerfile
test/oci-tests/: Cargo.toml
test/oci-tests/tests/: seccomp.rs
test/oci-tests/tests/common/: mod.rs
test/wasi-modules-for-testing/: Cargo.toml  build.rs
test/wasi-modules-for-testing/src/: list_files.rs
